fix: overflow in whole app

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Open Sans Condensed';
     padding: 0 60px;
-    overflow: hidden;
+    overflow: auto;
     height: 100vh;
 }
 
