--- a/src/components/collection-item/collection-item.component.scss
+++ b/src/components/collection-item/collection-item.component.scss
@@ -52,7 +52,7 @@
     }
 
     .added-info {
-      color: rgb(22, 145, 22);
+      color: rgb(44, 161, 44);
       font-size: 16px;
     }
   }
