--- a/src/components/collection-overview/collection-overview.style.scss
+++ b/src/components/collection-overview/collection-overview.style.scss
@@ -1,9 +1,6 @@
 .all-collections {
-    height: 75vh;
-    overflow: auto;
+
 }
 
 .collections-container {
-    height: 100%;
-    overflow: hidden;
 }
